added two new features: image, second header

--- a/MyWebsite.html
+++ b/MyWebsite.html
@@ -12,15 +12,24 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: grey;
         }
         h1 {
             font-size: 3rem;
             color: #333;
+            height:100px;
+ 
+        }
+        h2 {
+            font-size: 2rem;
+            color:#333;
         }
     </style>
 </head>
 <body>
-    <h1>My name is: Insert name here</h1>
+    <img src="cewl.jpg" alt="cewl">
+    <h1>My name is: Edward</h1>
+    <h2>And this is my Website!</h2>
+    
 </body>
 </html>
