--- a/MyWebsite.html
+++ b/MyWebsite.html
@@ -30,6 +30,7 @@
     <img src="cewl.jpg" alt="cewl">
     <h1>My name is: Edward</h1>
     <h2>And this is my Website!</h2>
+    <h2>Now being Deployed Using GitHub Actions!</h2>
     
 </body>
 </html>
